<resources>
    <string name="app_name">ConstraintLogin</string>
    <string name="anr">ANR</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="license">License</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="success">Log in Success!</string>
</resources>